# lean-rs

./: .editorconfig  .gitignore  .mdwright.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  deny.toml  rustfmt.toml  taplo.toml
.cargo/: config.toml
crates/lean-rs/: Cargo.toml  README.md  build.rs
crates/lean-rs-abi/: Cargo.toml  README.md  build.rs
crates/lean-rs-abi/src/: consts.rs  lib.rs  supported.rs  symbols.rs
crates/lean-rs-host/: Cargo.toml  README.md  build.rs
crates/lean-rs-host/benches/: session.rs
crates/lean-rs-host/examples/: README.md  evaluate.rs  lake_build_helper.rs  long_session_memory.rs  meta_query.rs  process_file.rs  process_module_query.rs  process_module_with_info_tree.rs  progress.rs  proof_check.rs  theorem_query.rs  tour.rs
crates/lean-rs-host/shims/lean-rs-host-shims/: LeanRsHostShims.lean  lake-manifest.json  lakefile.lean
crates/lean-rs-host/shims/lean-rs-interop-shims/: lake-manifest.json
crates/lean-rs-host/src/: lib.rs
crates/lean-rs-host/src/host/: bracketed.rs  cancellation.rs  capabilities.rs  declaration_search.rs  host.rs  lake.rs  mod.rs  pool.rs  progress.rs  session.rs  shim_bindings.rs  tests.rs
crates/lean-rs-host/tests/: attempt_envelope_entry_state.rs  batching_and_pool.rs  bundled_shims.rs  cancellation.rs  compile_fail_surface.rs  concurrency_smoke.rs  curated_surface.rs  diagnostics.rs  interop_shims_parity.rs  panic_containment.rs  progress.rs  session_leak_loop.rs  source_ranges_and_filtering.rs
crates/lean-rs-host/tests/compile_fail/: handle_outlives_runtime.rs  handle_outlives_runtime.stderr  pooled_session_outlives_pool.rs  pooled_session_outlives_pool.stderr  runtime_is_not_send_or_sync.rs  runtime_is_not_send_or_sync.stderr  session_outlives_capabilities.rs  session_outlives_capabilities.stderr
crates/lean-rs-sys/: Cargo.toml  README.md  build.rs
crates/lean-rs-sys/digests/: manifest.json
crates/lean-rs-sys/src/: array.rs  closure.rs  consts.rs  ctor.rs  external.rs  init.rs  io.rs  lib.rs  memory.rs  nat_int.rs  object.rs  refcount.rs  repr.rs  scalar.rs  string.rs  supported.rs  types.rs
crates/lean-rs-sys/tests/: compile_fail_surface.rs  layout.rs  linkage.rs  safety_grep.rs
crates/lean-rs-sys/tests/compile_fail/: lean_object_not_constructible.rs  lean_object_not_constructible.stderr  lean_object_repr_not_nameable.rs  lean_object_repr_not_nameable.stderr
crates/lean-rs-test-support/: Cargo.toml  README.md  build.rs
crates/lean-rs-test-support/src/: fixture.rs  lib.rs
crates/lean-rs-worker/: Cargo.toml  README.md  build.rs
crates/lean-rs-worker-child/: Cargo.toml  README.md  build.rs
crates/lean-rs-worker-child/benches/: row_payload.rs  worker_capability.rs
crates/lean-rs-worker-child/examples/: lean_dup_readiness.rs  mathlib_scale_probe.rs  memory_cycling.rs  pool_memory_scheduling.rs  proof_candidate_probe.rs  row_perf_probe.rs  worker_capability_probe.rs  worker_capability_runner.rs  worker_pool.rs  worker_streaming.rs
crates/lean-rs-worker-child/src/: child.rs  lib.rs
crates/lean-rs-worker-child/tests/: capability_builder.rs  import_planning.rs  lean_dup_readiness.rs  lean_dup_shaped_fixture.rs  loader_regressions.rs  mathlib_scale_fixture.rs  metadata_doctor.rs  observability_backpressure.rs  pool.rs  protocol.rs  row_sink.rs  session_adapter.rs  streaming_runner.rs  supervisor.rs  typed_command.rs  typed_session.rs
crates/lean-rs-worker-parent/: Cargo.toml  README.md  build.rs
crates/lean-rs-worker-parent/src/: capability.rs  lib.rs  planning.rs  pool.rs  session.rs  supervisor.rs
crates/lean-rs-worker-parent/tests/: worker_shutdown.rs
crates/lean-rs-worker-protocol/: Cargo.toml  README.md  build.rs
crates/lean-rs-worker-protocol/src/: harness.rs  lib.rs  protocol.rs  types.rs  worker_exports.rs
crates/lean-rs-worker/benches/: row_payload.rs  worker_capability.rs
crates/lean-rs-worker/examples/: lean_dup_readiness.rs  mathlib_scale_probe.rs  memory_cycling.rs  pool_memory_scheduling.rs  row_perf_probe.rs  worker_capability_probe.rs  worker_capability_runner.rs  worker_pool.rs  worker_streaming.rs
crates/lean-rs-worker/src/: __test_support.rs  capability.rs  child.rs  lib.rs  planning.rs  pool.rs  protocol.rs  session.rs  supervisor.rs  types.rs
crates/lean-rs-worker/tests/: capability_builder.rs  import_planning.rs  lean_dup_readiness.rs  lean_dup_shaped_fixture.rs  loader_regressions.rs  mathlib_scale_fixture.rs  metadata_doctor.rs  observability_backpressure.rs  pool.rs  protocol.rs  row_sink.rs  session_adapter.rs  streaming_runner.rs  supervisor.rs  typed_command.rs  typed_session.rs
crates/lean-rs/benches/: hot_paths.rs  session.rs
crates/lean-rs/examples/: README.md  alloc_probe.rs  cold_probe.rs  evaluate.rs  interop_callback.rs  meta_query.rs  proof_check.rs  session_workflow.rs  string_streaming.rs  theorem_query.rs  tour.rs
crates/lean-rs/fuzz/: Cargo.toml  build.rs
crates/lean-rs/fuzz/fuzz_targets/: abi_decode.rs
crates/lean-rs/src/: callback.rs  error.rs  fuzz_entry.rs  lib.rs
crates/lean-rs/tests/: batching_and_pool.rs  callback_registry.rs  callback_trampoline.rs  compile_fail_surface.rs  concurrency_smoke.rs  curated_surface.rs  diagnostics.rs  session_leak_loop.rs  string_callback_abi.rs
crates/lean-toolchain/: Cargo.toml  README.md  build.rs
crates/lean-toolchain/src/: build_helpers.rs  built_capability.rs  diagnostics.rs  discover.rs  fingerprint.rs  lakefile_toml.rs  lib.rs  limits.rs  loader.rs  manifest_validation.rs  modules.rs  source_package.rs
crates/lean-toolchain/tests/: discover.rs  linkage.rs  smoke.rs  version_window.rs
profiling/: Cargo.toml  README.md
profiling/scripts/: analyze_samply_symbols.py  profile_memory.sh  profile_with_samply.sh
profiling/src/: common.rs  lib.rs  report_schema.rs  report_writer.rs  runner.rs
templates/shipped-lean-crate/: Cargo.toml  build.rs
templates/shipped-lean-crate/examples/: worker.rs
templates/shipped-lean-crate/lean/: ShipLeanDemo.lean  lake-manifest.json  lakefile.lean
templates/shipped-lean-crate/src/: main.rs
(+287 files in other folders)
