[package]
authors.workspace = true
categories = ["api-bindings"]
description = "Opinionated Rust host stack for embedding Lean 4 as a theorem-prover capability: typed sessions, kernel-check evidence handles, bounded MetaM services, batching, and session pooling. Built on top of the `lean-rs` FFI primitive."
documentation = "https://docs.rs/lean-rs-host"
edition.workspace = true
include = [
  "src/**/*.rs",
  "build.rs",
  "tests/**/*.rs",
  "tests/compile_fail/**",
  "examples/**/*.rs",
  "benches/**/*.rs",
  "Cargo.toml",
  "README.md",
  "LICENSE-MIT",
  "LICENSE-APACHE",
]
keywords = ["bindings", "embedding", "host", "lean", "lean4"]
license.workspace = true
name = "lean-rs-host"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
lean-rs = { workspace = true }
lean-rs-sys = { workspace = true }
libloading = "0.8"
object = { version = "0.36", default-features = false, features = ["read", "std"] }
tracing = { version = "0.1", default-features = false, features = ["std", "attributes"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std"] }

[dev-dependencies]
trybuild = "1"
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std", "fmt", "env-filter"] }

[[bench]]
name = "session"
harness = false

[lints]
workspace = true
