[package]
authors.workspace = true
categories = ["api-bindings"]
description = "Opinionated Rust host stack for embedding Lean 4 as a theorem-prover capability: typed sessions, kernel-check evidence handles, bounded MetaM services, batching, and session pooling. Built on top of the `lean-rs` FFI primitive."
documentation = "https://docs.rs/lean-rs-host"
edition.workspace = true
include = [
  "Cargo.toml",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "README.md",
  "benches/**/*.rs",
  "build.rs",
  "examples/**/*.rs",
  "shims/**/*.c",
  "shims/**/*.lean",
  "shims/**/lakefile.lean",
  "shims/**/lake-manifest.json",
  "shims/**/lean-toolchain",
  "src/**/*.rs",
  "tests/**/*.rs",
  "tests/compile_fail/**",
]
keywords = ["bindings", "embedding", "host", "lean", "lean4"]
license.workspace = true
name = "lean-rs-host"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
lean-rs = { workspace = true }
lean-rs-sys = { workspace = true }
lean-toolchain = { workspace = true }
libloading = "0.8"
object = { version = "0.36", default-features = false, features = ["read", "std"] }
tracing = { version = "0.1", default-features = false, features = ["attributes", "std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std"] }

[dev-dependencies]
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "registry", "std"] }
trybuild = "1"

[[bench]]
harness = false
name = "session"

[lints]
workspace = true
