[package]
authors.workspace = true
categories = ["api-bindings", "external-ffi-bindings"]
description = "Raw FFI bindings for the Lean 4 C ABI. See `lean-rs` for the safe front door."
documentation = "https://docs.rs/lean-rs-sys"
edition.workspace = true
include = ["Cargo.toml", "LICENSE-APACHE", "LICENSE-MIT", "README.md", "build.rs", "src/**/*.rs", "tests/**/*.rs"]
keywords = ["bindings", "ffi", "lean", "lean4", "sys"]
license.workspace = true
links = "leanshared"
name = "lean-rs-sys"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
# Default: dynamic linking against `libleanshared.dylib`. The static feature
# is also available but selecting it requires extending the link set beyond
# what `lean.h` requires (notably `libStd.a` and an appropriate link order);
# see `build.rs` for the details.
default = ["dynamic", "mimalloc"]
dynamic = []
mimalloc = []
metadata-only = []
static = []

[build-dependencies]
sha2 = { workspace = true }

[lints]
workspace = true
