[package]
name = "lean-rs-test-support"
description = "Workspace-internal test fixtures and helpers for the lean-rs crate. Not part of the public stability surface."
authors.workspace = true
categories = ["development-tools::testing"]
edition.workspace = true
keywords = ["lean", "lean4", "testing", "fixtures", "internal"]
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true
