[package]
authors.workspace = true
build = "build.rs"
categories = ["development-tools::testing"]
description = "Workspace-internal test fixtures and helpers for the lean-rs crate. Not part of the public stability surface."
edition.workspace = true
keywords = ["fixtures", "internal", "lean", "lean4", "testing"]
license.workspace = true
name = "lean-rs-test-support"
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# TODO(prompt 12): drop this dependency along with the throwaway
# `fixture` module — the typed `LeanLibrary`/`LeanExported{N}` machinery
# loads compiled Lean modules without needing the test-support crate to
# reach into raw FFI directly.
#
# We intentionally do NOT depend on `lean-rs` here so the test-support
# crate does not appear as both a regular- and dev-dependency of itself
# (a dependency-graph diamond that produces "multiple versions of crate
# lean_rs" build errors in `cargo test -p lean-rs`).
lean-rs-sys.workspace = true

[lints]
workspace = true
