[package]
authors.workspace = true
build = "build.rs"
categories = ["api-bindings"]
description = "Child-process runtime for the lean-rs worker boundary."
documentation = "https://docs.rs/lean-rs-worker-child"
edition.workspace = true
include = [
  "Cargo.toml",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "README.md",
  "benches/**/*.rs",
  "build.rs",
  "examples/**/*.rs",
  "src/**/*.rs",
  "tests/**/*.rs",
]
keywords = ["ipc", "lean", "lean4", "runtime", "worker"]
license.workspace = true
name = "lean-rs-worker-child"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
lean-rs = { workspace = true }
lean-rs-host = { workspace = true }
lean-rs-worker-protocol = { workspace = true }
lean-toolchain = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }

[target.'cfg(unix)'.dependencies]
# Used only to call `setrlimit(RLIMIT_CORE, 0)` and install an immediate
# `SIGABRT` handler in the worker child so abort-triggered termination does
# not block on the kernel's core-dump pipe handler (e.g. apport,
# systemd-coredump). See `child::install_immediate_abort_exit` and
# `docs/architecture/06-panic-containment.md`.
libc = "0.2"

[dev-dependencies]
ciborium = "0.2"
criterion = { workspace = true }
dhat = "0.3"
lean-rs-worker-parent = { workspace = true }
lean-rs-worker-protocol = { workspace = true, features = ["harness"] }
rmp-serde = "1"

[[bin]]
name = "lean-rs-worker-child"
path = "src/bin/lean-rs-worker-child.rs"

[[bench]]
harness = false
name = "row_payload"

[[bench]]
harness = false
name = "worker_capability"

[lints]
workspace = true

[lib]
doctest = false

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = []
