[package]
authors.workspace = true
categories = ["api-bindings"]
description = "Parent-side supervisor for the lean-rs worker process boundary."
documentation = "https://docs.rs/lean-rs-worker-parent"
edition.workspace = true
include = [
  "Cargo.toml",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "README.md",
  "benches/**/*.rs",
  "examples/**/*.rs",
  "src/**/*.rs",
  "tests/**/*.rs",
]
keywords = ["ipc", "lean", "lean4", "supervisor", "worker"]
license.workspace = true
name = "lean-rs-worker-parent"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
lean-rs-worker-protocol = { workspace = true }
lean-toolchain = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
lean-rs-worker-protocol = { workspace = true, features = ["harness"] }
serde = { version = "1", features = ["derive"] }

[lints]
workspace = true

[lib]
doctest = false

[[test]]
harness = false
name = "worker_shutdown"
path = "tests/worker_shutdown.rs"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = []
