[package]
authors.workspace = true
categories = ["api-bindings"]
description = "Worker-process boundary for lean-rs host workloads."
documentation = "https://docs.rs/lean-rs-worker"
edition.workspace = true
include = [
  "Cargo.toml",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "README.md",
  "build.rs",
  "examples/**/*.rs",
  "src/**/*.rs",
  "tests/**/*.rs",
]
keywords = ["bindings", "embedding", "lean", "lean4", "worker"]
license.workspace = true
name = "lean-rs-worker"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
lean-rs = { workspace = true }
lean-rs-host = { workspace = true }
lean-toolchain = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
ciborium = "0.2"
criterion = { workspace = true }
dhat = "0.3"
rmp-serde = "1"

[[bench]]
harness = false
name = "row_payload"

[[bench]]
harness = false
name = "worker_capability"

[[bin]]
name = "lean-rs-worker-child"
path = "src/bin/lean-rs-worker-child.rs"

[lints]
workspace = true

[lib]
doctest = false
