[package]
authors.workspace = true
categories = ["api-bindings", "external-ffi-bindings"]
description = "Safe Rust bindings for hosting Lean 4 capabilities: runtime initialization, owned and borrowed object handles, typed first-order ABI conversions, compiled module loading, exported function calls, semantic handles, bounded meta services, batching, and session pooling."
documentation = "https://docs.rs/lean-rs"
edition.workspace = true
include = [
  "src/**/*.rs",
  "build.rs",
  "tests/**/*.rs",
  "tests/compile_fail/**",
  "examples/**/*.rs",
  "benches/**/*.rs",
  "Cargo.toml",
  "README.md",
  "LICENSE-MIT",
  "LICENSE-APACHE",
]
keywords = ["bindings", "embedding", "host", "lean", "lean4"]
license.workspace = true
name = "lean-rs"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
lean-rs-sys.workspace = true
libloading = "0.8"
# Symbol-table walk in `module::library` distinguishes Lean nullary-constant
# globals (compiled by Lake as persistent `lean_object*` data-section
# symbols) from callable functions. One-shot at `LeanLibrary::open` so the
# function-vs-global distinction stays invisible to callers of
# `LeanModule::exported`.
object = { version = "0.36", default-features = false, features = ["read", "std"] }
# Structured spans + events around runtime init, module load + dispatch,
# host session calls, and bulk/pool paths. No subscriber is installed by
# the crate; downstream consumers attach their own (or `DiagnosticCapture`
# for in-process tests). Cost is one atomic load per span entry when no
# subscriber is attached.
tracing = { version = "0.1", default-features = false, features = ["std", "attributes"] }
# `tracing-subscriber` powers `DiagnosticCapture` (always present, no
# feature gate). Only the `registry` plumbing is needed; the `fmt`
# stack is intentionally absent so downstream applications choose their
# own formatter.
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std"] }
# Optional heap profiler for `examples/alloc_probe.rs`. Gated behind the
# `dhat-heap` feature so the default build, `cargo test`, and `cargo bench`
# do not pull dhat in. Installs `dhat::Alloc` as the *Rust* global
# allocator; Lean's internal mimalloc (statically linked into
# `libleanrt.a`) is a separate allocator and unaffected.
dhat = { version = "0.3", optional = true }

[features]
# Enables the dhat-instrumented `alloc_probe` example. Not consumed by
# any library code path — purely a build switch for the profiling binary.
dhat-heap = ["dep:dhat"]
# Opens a narrow set of `pub(crate)` ABI decoders as `pub fn` entry
# points so the in-tree `fuzz/` crate (cargo-fuzz, nightly-only) can
# drive them with `lean-rs-sys`-constructed Lean-shaped inputs.
#
# This feature is **not** semver-stable: it is intentionally invisible
# in published documentation and is gated solely for fuzzing
# infrastructure. The exposed surface is the `lean_rs::abi::fuzz_entry`
# module; it is not re-exported at the crate root.
fuzzing = []

[dev-dependencies]
# Compile-fail tests pinning the curated surface invariants (handles
# cannot outlive their runtime borrow; runtime / session / handles are
# !Send + !Sync). Each negative case lives under tests/compile_fail/.
trybuild = "1"
# Criterion drives the steady-state hot-path and session-path baselines
# under `benches/`. Cold paths (runtime init, library open, module init)
# are once-per-process and live in `examples/cold_probe.rs` instead —
# see `docs/performance/baseline.md` for the rationale.
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }
# Examples under `examples/` install a `tracing_subscriber::fmt`
# sink so `RUST_LOG=lean_rs=info cargo run --example <name>` surfaces
# the spans the crate emits. The non-dev `tracing-subscriber`
# dependency carries only `registry` + `std` (enough for
# `DiagnosticCapture`); the dev override layers `fmt` + `env-filter`
# on top so production builds don't pull either.
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std", "fmt", "env-filter"] }

[[bench]]
name = "hot_paths"
harness = false

[[bench]]
name = "session"
harness = false

[[example]]
name = "cold_probe"

[[example]]
name = "alloc_probe"
required-features = ["dhat-heap"]

[lints]
workspace = true
